--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css2?family=Source+Code+Pro);
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
 :root {
   --color-bg: #2e3440;
@@ -15,7 +16,9 @@
   box-sizing: border-box;
   text-transform: lowercase;
 }
-
+span {
+  font-size: 100px;
+  font-family: 'Righteous', sans-serif}
 html,
 body {
   overflow: hidden;
@@ -130,8 +133,7 @@ li {
   font-size: 0.9vw;
   list-style-type: none;
   margin-bottom: 10px;
-}
-
+}  
 a {
   text-decoration: none;
   color: var(--color-link);
@@ -141,6 +143,7 @@ a {
 a:hover {
   color: var(--color-link-hover);
   transition-duration: 0.2s;
+  text-decoration: underline;
 }
 
 .blinking {
